--- a/source/css/main.css
+++ b/source/css/main.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@500;700&display=swap');
 
 :root{
-  --text-color-:#1b1a1a;
+  --text-color:#201f1f;
+  --title-color:#0c0c0c;
   --font-family: "PingFang SC", "LXGW WenKai", 'Times New Roman', 'Noto Serif SC', serif,"Microsoft YaHei", sans-serif;
   --change-color:#AB545A;
 }
 
 a{
-  color: var(--text-color-);
+  color: var(--text-color);
   text-decoration: none;
 }
 body {
@@ -25,6 +26,7 @@ body {
 @media (prefers-color-scheme: dark) {
   :root {
     --text-color: #adaaaa;
+    --title-color:#c6c6c6;
   }
   body {
     background-color: #121212;
@@ -77,7 +79,6 @@ body {
   line-height: 1.6rem;
   font-size: 18px;
   display: flex;
-  align-items: center;
   column-gap: 14px;
   flex-wrap: nowrap;
   justify-content: space-between;
@@ -133,7 +134,7 @@ ul.archive-list a {
 }
 
 article#post > h1#post-title {
-  color: var(--text-color);
+  color: var(--title-color);
   font-size: 2rem;
 }
 article#post > #post-memu {
